--- a/style/styles.css
+++ b/style/styles.css
@@ -1,9 +1,57 @@
-/*font-family: Noto Serif Vithkuqi, serif;
-font-family: "Playfair Display", serif;
-font-family: "Poppins", sans-serif;
-font-family: "Tilt Prism", cursive; */
+:root {
+  --primary-color: #14345b;
+  --btn-color: #bdede3;
+  --btn-hover: #81d1c7;
+  --primary-font: "Playfair Display", serif;
+  --secondary-font: "Poppins", sans-serif;
+}
+
+body {
+  background: var(--primary-color);
+}
 
 h1 {
-  font-family: "Playfair Display", serif;
-  color: green;
+  font-size: 80px;
+  font-weight: bold;
+  font-family: var(--primary-font);
+  color: white;
+}
+
+h2 {
+  font-family: var(--secondary-font);
+  color: white;
+  font-weight: normal;
+  font-size: 22px;
+}
+
+.womanCoding {
+  width: 70%;
+  margin: 0 auto;
+  border-radius: 50px 5px;
+  height: auto;
+}
+
+.btn {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 18px 30px;
+  position: absolute;
+  width: 200px;
+  height: 63px;
+  margin-top: 30px;
+  background: var(--btn-color);
+  font-family: var(--secondary-font);
+  color: black;
+}
+
+.btn a {
+  border-radius: 4px;
+  text-decoration: none;
+  text-transform: capitalize;
+}
+
+.btn:hover {
+  background: var(--btn-hover);
 }
