--- a/style/styles.css
+++ b/style/styles.css
@@ -1,32 +1,36 @@
 :root {
   --primary-color: #14345b;
+  --secondary-color: #d8d7c38c;
   --btn-color: #bdede3;
-  --btn-hover: #81d1c7;
+  --btn-hover: #51b4c4;
   --primary-font: "Playfair Display", serif;
   --secondary-font: "Poppins", sans-serif;
 }
 
-body {
+/* homepage*/
+.homepage {
   background: var(--primary-color);
+}
+
+.hero {
+  background: var(--primary-color);
+  padding: 60px 20px;
+  text-align: center;
 }
 
 .hero h1,
 .hero h2,
-.hero h3,
-.hero p,
-.hero a {
+.hero h3 {
   color: white;
 }
 .hero h1 {
   font-size: 80px;
   font-weight: bold;
   font-family: var(--primary-font);
-  color: white;
 }
 
 .hero h2 {
   font-family: var(--secondary-font);
-  color: white;
   font-weight: normal;
   font-size: 22px;
 }
@@ -47,22 +51,66 @@ body {
   display: flex;
   justify-content: space-evenly;
   font-family: var(--primary-font);
-  margin-top: 40px;
+  margin-top: 30px;
 }
 
 .navigationLinks a {
-  margin: 20px;
   border-radius: 4px;
   padding: 20px 15px;
   color: var(--btn-color);
-  font-size: 30px;
+  font-size: 32px;
 }
 
 .navLinkBtn:hover {
-  color: black;
+  color: var(--btn-hover);
 }
 
-@media (max-width: 768px) {
+/*About page*/
+.sidekick {
+  background: var(--secondary-color);
+}
+
+h2 {
+  color: var(--primary-color);
+  font-family: var(--primary-font);
+  font-size: 67px;
+  text-align: center;
+}
+
+.sidekick p {
+  font-family: var(--secondary-font);
+  font-size: 18px;
+}
+
+.content {
+  background-color: var(--primary-color);
+  color: white;
+  max-width: 550px;
+  max-height: 450px;
+  border-radius: 15px;
+}
+
+.aboutParagraph {
+  max-width: 500px;
+}
+
+.skills {
+  text-align: center;
+  padding: 25px 20px;
+}
+
+.skills img {
+  width: 55px;
+  padding-top: 30px;
+}
+
+.homeFooter {
+  text-align: center;
+  margin-top: 40px;
+  color: white;
+}
+
+@media (max-width: 766px) {
   h1 {
     font-size: 50px;
     text-align: center;
@@ -82,8 +130,16 @@ body {
   .hero {
     padding: 80px 20px;
   }
+
+  .aboutParagraph {
+    text-align: center;
+  }
+
+  .content {
+    display: none;
+  }
 }
-@media (max-width: 600px) {
+@media (width < 576px) {
   .navigationLinks {
     display: flex;
     flex-direction: column;
@@ -91,5 +147,8 @@ body {
   }
   .btn {
     padding: 10px 20px;
+  }
+  .content {
+    display: none;
   }
 }
