--- a/style/styles.css
+++ b/style/styles.css
@@ -71,15 +71,9 @@
 }
 
 h2 {
-  color: var(--primary-color);
   font-family: var(--primary-font);
   font-size: 67px;
   text-align: center;
-}
-
-.sidekick p {
-  font-family: var(--secondary-font);
-  font-size: 18px;
 }
 
 .content {
@@ -92,6 +86,9 @@ h2 {
 
 .aboutParagraph {
   max-width: 500px;
+  font-family: var(--secondary-font);
+  font-size: 18px;
+  color: rgba(0, 0, 0, 0.7);
 }
 
 .skills {
@@ -104,13 +101,34 @@ h2 {
   padding-top: 30px;
 }
 
+/* Projects*/
+
+.primary-link {
+  border-radius: 4px;
+  padding: 20px 15px;
+  text-decoration: none;
+  text-transform: capitalize;
+  background: #005792;
+  box-shadow: var(--box-shadow);
+  color: white;
+}
+
+.primary-link:hover {
+  color: black;
+}
+
+.projectImages {
+  height: 350px;
+  width: 500px;
+}
+
 .homeFooter {
   text-align: center;
   margin-top: 40px;
   color: white;
 }
 
-@media (max-width: 766px) {
+@media (max-width: 820px) {
   h1 {
     font-size: 50px;
     text-align: center;
@@ -133,6 +151,7 @@ h2 {
 
   .aboutParagraph {
     text-align: center;
+    max-width: 100%;
   }
 
   .content {
@@ -145,9 +164,13 @@ h2 {
     flex-direction: column;
     justify-content: space-evenly;
   }
+  .hero h1 {
+    font-size: 50px;
+  }
   .btn {
     padding: 10px 20px;
   }
+
   .content {
     display: none;
   }
