--- a/style/styles.css
+++ b/style/styles.css
@@ -57,12 +57,40 @@
 .navigationLinks a {
   border-radius: 4px;
   padding: 20px 15px;
-  color: var(--btn-color);
+  color: var(--btn-hover);
   font-size: 32px;
 }
 
 .navLinkBtn:hover {
+  color: var(--btn-color);
+}
+
+.icon {
+  text-align: center;
+  color: var(--btn-color);
+}
+
+.contactMe {
+  color: white;
+}
+
+.contactMe h3 {
   color: var(--btn-hover);
+}
+
+.contactLinks {
+  display: flex;
+  justify-content: space-evenly;
+  font-family: var(--secondary-font);
+  margin-top: 7px;
+}
+.contactLinks a {
+  color: var(--btn-hover);
+  font-size: 32px;
+  text-decoration: none;
+}
+.contactLinkBtn:hover {
+  color: var(--btn-color);
 }
 
 /*About page*/
@@ -122,12 +150,6 @@ h2 {
   width: 500px;
 }
 
-.homeFooter {
-  text-align: center;
-  margin-top: 40px;
-  color: white;
-}
-
 @media (max-width: 820px) {
   h1 {
     font-size: 50px;
@@ -157,6 +179,10 @@ h2 {
   .content {
     display: none;
   }
+
+  .icon {
+    display: none;
+  }
 }
 @media (width < 576px) {
   .navigationLinks {
@@ -164,6 +190,12 @@ h2 {
     flex-direction: column;
     justify-content: space-evenly;
   }
+  .contactLinks {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
+
   .hero h1 {
     font-size: 50px;
   }
