--- a/style/styles.css
+++ b/style/styles.css
@@ -1,46 +1,77 @@
 :root {
   --primary-color: #14345b;
   --secondary-color: #d8d7c38c;
-  --btn-color: #bdede3;
-  --btn-hover: #51b4c4;
+  --accent-color: #bdede3;
+  --accent-color-2: #51b4c4;
   --primary-font: "Playfair Display", serif;
   --secondary-font: "Poppins", sans-serif;
 }
-/* NavBar*/
+
+/* All Pages */
 .navbar {
   background: #00204a !important;
 }
 
 .navbar-brand {
-  color: var(--btn-hover);
+  color: white;
+  padding-left: 20px;
+  font-family: var(--primary-font);
+}
+
+.navbar-brand:hover {
+  color: var(--accent-color-2);
 }
 .nav-link {
-  color: var(--btn-color);
+  color: white;
+  font-family: var(--secondary-font);
 }
 
 .nav-link:hover {
-  color: var(--btn-hover);
-}
-/* homepage*/
-.homepage {
-  background: var(--primary-color);
+  color: var(--accent-color-2);
 }
 
+.coded-by {
+  color: white;
+  font-family: monospace;
+  font-size: 11px;
+  padding-top: 15px;
+  text-decoration: none;
+  margin-bottom: 0;
+}
+
+#open-source {
+  padding-right: 10px;
+  text-decoration: none;
+  color: #d8d7c38c;
+}
 .hero {
   background: var(--primary-color);
   padding: 60px 20px;
   text-align: center;
 }
-
-.hero h1,
-.hero h2,
-.hero h3 {
-  color: white;
-}
 .hero h1 {
   font-size: 80px;
   font-weight: bold;
   font-family: var(--primary-font);
+  color: white;
+}
+footer {
+  background-color: var(--primary-color);
+  color: white;
+  padding: 10px;
+  font-family: var(--secondary-font);
+  font-weight: 100;
+}
+span {
+  text-align: center;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+/* homepage*/
+.hero h2,
+.hero h3 {
+  color: white;
 }
 
 .hero h2 {
@@ -71,25 +102,23 @@
 .navigationLinks a {
   border-radius: 4px;
   padding: 20px 15px;
-  color: var(--btn-hover);
+  color: var(--accent-color-2);
   font-size: 32px;
 }
 
 .navLinkBtn:hover {
-  color: var(--btn-color);
-}
-
-.icon {
-  text-align: center;
-  color: var(--btn-color);
+  color: var(--accent-color);
 }
 
 .contactMe {
   color: white;
+  font-family: var(--primary-font) !important;
+  font-size: 65px !important;
 }
 
-.contactMe h3 {
-  color: var(--btn-hover);
+.icon {
+  text-align: center;
+  color: var(--accent-color);
 }
 
 .contactLinks {
@@ -99,23 +128,29 @@
   margin-top: 7px;
 }
 .contactLinks a {
-  color: var(--btn-hover);
+  color: var(--accent-color-2);
   font-size: 32px;
   text-decoration: none;
 }
-.contactLinkBtn:hover {
-  color: var(--btn-color);
+.contactLinkaccent:hover {
+  color: var(--accent-color);
 }
 
-/*About page*/
-.sidekick {
-  background: var(--secondary-color);
-}
-
+/*About specific*/
 h2 {
   font-family: var(--primary-font);
   font-size: 67px;
   text-align: center;
+}
+.sidekick {
+  background: var(--secondary-color);
+}
+
+.aboutParagraph {
+  max-width: 500px;
+  font-family: var(--secondary-font);
+  font-size: 18px;
+  color: rgba(0, 0, 0, 0.7);
 }
 
 .content {
@@ -124,13 +159,6 @@ h2 {
   max-width: 550px;
   max-height: 450px;
   border-radius: 15px;
-}
-
-.aboutParagraph {
-  max-width: 500px;
-  font-family: var(--secondary-font);
-  font-size: 18px;
-  color: rgba(0, 0, 0, 0.7);
 }
 
 .skills {
@@ -143,15 +171,15 @@ h2 {
   padding-top: 30px;
 }
 
-/* Projects*/
-
+/* Projects specific*/
 .primary-link {
   border-radius: 4px;
   padding: 20px 15px;
   text-decoration: none;
   text-transform: capitalize;
-  background: #005792;
+  background: var(--primary-color);
   box-shadow: var(--box-shadow);
+  font-family: var(--secondary-font);
   color: white;
 }
 
@@ -162,34 +190,6 @@ h2 {
 .projectImages {
   height: 350px;
   width: 500px;
-}
-
-footer {
-  background-color: var(--primary-color);
-  color: white;
-  padding: 10px;
-  font-family: var(--secondary-font);
-  font-weight: 100;
-}
-span {
-  text-align: center;
-  padding-left: 20px;
-  padding-right: 20px;
-}
-
-.coded-by {
-  color: white;
-  font-family: monospace;
-  font-size: 11px;
-  padding-top: 15px;
-  text-decoration: none;
-  margin-bottom: 0;
-}
-
-#open-source {
-  padding-right: 10px;
-  text-decoration: none;
-  color: #d8d7c38c;
 }
 
 @media (max-width: 820px) {
@@ -241,7 +241,7 @@ span {
   .hero h1 {
     font-size: 50px;
   }
-  .btn {
+  .accent {
     padding: 10px 20px;
   }
 
